--- a/composer.json
+++ b/composer.json
@@ -7,37 +7,37 @@
     "friendsofphp/php-cs-fixer": "^2.16",
     "squizlabs/php_codesniffer": "^3.5",
     "phpmd/phpmd": "^2.8",
-    "mockery/mockery": "^1.3",
-    "phpstan/phpstan": "^0.12.31",
+    "mockery/mockery": "^1.4",
+    "phpstan/phpstan": "^0.12",
     "phpstan/extension-installer": "^1.0",
-    "phpstan/phpstan-mockery": "^0.12.5",
-    "phpstan/phpstan-phpunit": "^0.12.11",
+    "phpstan/phpstan-mockery": "^0.12",
+    "phpstan/phpstan-phpunit": "^0.12",
     "keboola/php-temp": "^2.0",
-    "phpunit/phpunit": "^9.4",
-    "phpstan/phpstan-symfony": "^0.12.11",
-    "phpstan/phpstan-webmozart-assert": "^0.12.8"
+    "phpunit/phpunit": "^9.5",
+    "phpstan/phpstan-symfony": "^0.12",
+    "phpstan/phpstan-webmozart-assert": "^0.12"
   },
   "require": {
-    "doctrine/annotations": "^1.8",
-    "symfony/dependency-injection": "^5.1",
-    "symfony/config": "^5.1",
-    "symfony/workflow": "^5.1",
-    "symfony/yaml": "^5.1",
-    "symfony/form": "^5.1",
-    "symfony/validator": "^5.1",
-    "twig/twig": "^3.0",
-    "mingyoung/dingtalk": "^2.3",
-    "symfony/serializer": "^5.1",
-    "symfony/property-info": "^5.1",
-    "symfony/property-access": "^5.1",
+    "doctrine/annotations": "^1.11",
+    "symfony/dependency-injection": "^5.2",
+    "symfony/config": "^5.2",
+    "symfony/workflow": "^5.2",
+    "symfony/yaml": "^5.2",
+    "symfony/form": "^5.2",
+    "symfony/validator": "^5.2",
+    "twig/twig": "^3.3",
+    "symfony/serializer": "^5.2",
+    "symfony/property-info": "^5.2",
+    "symfony/property-access": "^5.2",
     "ext-json": "*",
-    "symfony/string": "^5.1",
-    "doctrine/orm": "^2.7",
-    "phpoffice/phpspreadsheet": "^1.14",
-    "symfony/security-core": "^5.1",
-    "symfony/uid": "^5.1",
-    "symfony/http-kernel": "^5.1",
-    "webmozart/assert": "^1.9"
+    "symfony/string": "^5.2",
+    "doctrine/orm": "^2.8",
+    "phpoffice/phpspreadsheet": "^1.16",
+    "symfony/security-core": "^5.2",
+    "symfony/uid": "^5.2",
+    "symfony/http-kernel": "^5.2",
+    "webmozart/assert": "^1.9",
+    "symfony/cache": "^5.2"
   },
   "autoload": {
     "psr-4": {
