--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
     "keboola/php-temp": "^2.0",
     "phpunit/phpunit": "^9.5",
     "phpstan/phpstan-symfony": "^0.12",
-    "phpstan/phpstan-webmozart-assert": "^0.12",
-    "pestphp/pest": "^1.0"
+    "phpstan/phpstan-webmozart-assert": "^0.12"
   },
   "require": {
     "doctrine/annotations": "^1.11",
