--- a/composer.json
+++ b/composer.json
@@ -8,14 +8,8 @@
     "squizlabs/php_codesniffer": "^3.5",
     "phpmd/phpmd": "^2.8",
     "mockery/mockery": "^1.4",
-    "phpstan/phpstan": "^0.12",
-    "phpstan/extension-installer": "^1.0",
-    "phpstan/phpstan-mockery": "^0.12",
-    "phpstan/phpstan-phpunit": "^0.12",
     "keboola/php-temp": "^2.0",
-    "phpunit/phpunit": "^9.5",
-    "phpstan/phpstan-symfony": "^0.12",
-    "phpstan/phpstan-webmozart-assert": "^0.12"
+    "phpunit/phpunit": "^9.5"
   },
   "require": {
     "doctrine/annotations": "^1.11",
