Set docker home directory permissions

--- a/Dockerfiles/base-dev/Dockerfile
+++ b/Dockerfiles/base-dev/Dockerfile
@@ -11,7 +11,7 @@ RUN echo 'export LC_ALL=C.UTF-8' >> /etc/profile
 
 COPY my-php-tweak.ini $PHP_INI_DIR/conf.d/
 
-RUN groupadd -g 1000 work && useradd --uid 1000 --gid 1000 --create-home work
+RUN groupadd -g 1000 work && useradd --uid 1000 --gid 1000 --create-home work -K UMASK=0022
 
 USER work
 COPY config.json /home/work/.config/composer
