--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     "symfony/property-access": "^5.3",
     "ext-json": "*",
     "symfony/string": "^5.3",
-    "doctrine/orm": "^2.8",
+    "doctrine/orm": "~2.8.0",
     "phpoffice/phpspreadsheet": "^1.16",
     "symfony/security-core": "^5.3",
     "symfony/uid": "^5.3",
