--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     "ext-json": "*",
     "symfony/string": "^5.3",
     "doctrine/orm": "~2.8.0",
-    "phpoffice/phpspreadsheet": "^1.16",
+    "phpoffice/phpspreadsheet": "~1.17.0",
     "symfony/security-core": "^5.3",
     "symfony/uid": "^5.3",
     "symfony/http-kernel": "^5.3",
