--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
     "webmozart/assert": "^1.9",
     "symfony/cache": "^6.2",
     "aura/sqlquery": "^2.7",
-    "ext-mbstring": "*"
+    "ext-mbstring": "*",
+    "symfony/security-bundle": "^6.2"
   },
   "autoload": {
     "psr-4": {
